--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -4,12 +4,12 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "start": "node .",
+        "start": "node server.js",
         "tsc": "tsc",
         "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
         "prod": "tsc && node ./www/server.js",
         "clean": "rm -rf www/ || true",
-        "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json",
+        "build": " tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cp .env www/.env",
         "test": "echo \"Error: no test specified\" && exit 1",
         "deploy": "chmod +x ./bin/deploy.sh && sh ./bin/deploy.sh"
     },
