--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2.1
 orbs:
   
-  node: circleci/node@4.9.0
-  aws-cli: circleci/aws-cli@2.0.6
+  node: circleci/node@5.0.0
+  aws-cli: circleci/aws-cli@2.1.0
   eb: circleci/aws-elastic-beanstalk@2.0.1
  
 jobs:
   build:
-    
+    docker:
+      - image: "cimg/base:stable"
     steps:
       - node/install
       - checkout
